@@ -1,5 +1,10 @@
 2021-03-06  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-trans.c (pkl_trans1_ps_print_stmt): Fix error
+	message.
+
+2021-03-06  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pvm.jitter (PVM_PRINTL): make more portable.
 	(printlu): Adapt accordingly.
 	(printl): Likewise.
